--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <div class="navbar">
+            <img src="download.jpeg" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">REGION</a></li>
+                    <li><a href="">ABOUT</a></li>
+                </ul>
+            </nav>
+            <img src="UI_stroke-46-512.webp" class="logo">
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <button type="submit">Search</button>
+              </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h1>tech toves</h1>
+                <p>A farmer is a person engaged in agriculture, raising living organisms for food or raw materials.[1] 
+                    The term usually applies to people who do some combination of raising field crops, orchards, vineyards, poultry, 
+                    or other livestock.
+                </p>
+                <button type="button" class="button">EXPLORE</button>
+            </div>
+            <div class="col">
+                <div class="card1">
+                    <h5>FARMERS</h5>
+                    <p>for farmers</p>
+                </div>
+                <div class="card2">
+                    <h5>FARMERS</h5>
+                    <p>for farmers</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
